2005-02-15  Dan Winship  <danw@novell.com>

	* generator/ObjectGen.cs (GenChildProperties): If the class has an
	ancestor that also defines child properties, make its child
	properties class be a subclass of that ancestor's child properties
	class. (Eg, make Gtk.ButtonBox.ButtonBoxChild be a subclass of
	Gtk.Box.BoxChild.)

2005-02-14  Mike Kestner  <mkestner@novell.com>

	* gdk/Gdk.metadata : mark the color in Rgb.FindColor ref.

2005-02-11  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata : hide Menu.SetScreen.
	* gtk/Menu.custom : manually implement Screen prop.

2005-02-11  Dan Winship  <danw@novell.com>

	* gtk/Gtk.metadata: Hide StyleGetProperty and StyleGetValist since
	they're generated wrong, and StyleGet to avoid an ellipsis
	warning. (Also hide the deprecated ellipsis method "Set".)

	* gtk/Widget.custom (StyleGetProperty): implement manually, a la
	Gtk.Container.ChildGetProperty.

	* gtk/glue/widget.c (gtksharp_widget_style_get_property): glue for that

	* generator/MethodBase.cs (Validate): use CName rather than always
	saying "in ctor"

2005-02-10  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* sample/Actions.cs: Remove obsolete & unsafe GLib.Object.Data usage.

2005-02-10  Mike Kestner  <mkestner@novell.com>

	* configure.in : update version for 1.9.2 release.

2005-02-09  Mike Kestner  <mkestner@novell.com>

	* gtk/Widget.custom : use a static method for the ParentSet hack
	so we don't leak objects because the delegate holds an object ref.

2005-02-07  Ben Maurer  <bmaurer@ximian.com>

	* gdk/Point.custom, gdk/Rectangle.custom: misc. new apis to make
	this more like the S.D structs.

2005-02-03  Mike Kestner  <mkestner@novell.com>

	* gtk/NodeStore.cs : use CreateNativeObject to allow subclassing.
	[Fixes #71749]

2005-02-03  Mike Kestner  <mkestner@novell.com>

	* glib/ObjectManager.cs (GetValidParentType): return null if
	G_TYPE_INVALID is returned from glue. [Fixes #72150]

2005-02-02  Mike Kestner  <mkestner@novell.com>
