@@ -8,6 +8,7 @@ APIS =
 endif
 INCLUDE_API = ../pango/pango-api.xml ../atk/atk-api.xml ../gdk/gdk-api.xml ../gtk/gtk-api.xml ../art/art-api.xml ../gnome/gnome-api.xml ../gda/gda-api.xml
 METADATA = GnomeDb.metadata
+SYMBOLS =
 references = ../glib/glib-sharp.dll ../pango/pango-sharp.dll ../atk/atk-sharp.dll ../gdk/gdk-sharp.dll ../gtk/gtk-sharp.dll ../art/art-sharp.dll ../gnome/gnome-sharp.dll ../gda/gda-sharp.dll
 
 sources =				\
