@@ -7,6 +7,7 @@ pkg =
 endif
 INCLUDE_API = ../pango/pango-api.xml ../atk/atk-api.xml ../gdk/gdk-api.xml ../gtk/gtk-api.xml ../art/art-api.xml ../gnome/gnome-api.xml
 METADATA = Gtk.metadata
+SYMBOLS =
 references = ../glib/glib-sharp.dll ../pango/pango-sharp.dll ../atk/atk-sharp.dll ../gdk/gdk-sharp.dll ../gtk/gtk-sharp.dll ../art/art-sharp.dll ../gnome/gnome-sharp.dll
 
 sources =
