@@ -1,3 +1,8 @@
+2005-02-17  Mike Kestner  <mkestner@novell.com>
+
+	* */Makefile.am : define SYMBOLS if it isn't already to fix breakage
+	with older automakes. 
+
 2005-02-15  Dan Winship  <danw@novell.com>
 
 	* generator/ObjectGen.cs (GenChildProperties): If the class has an
